<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|right"
    android:gravity="top"
    android:onClick="clickHandler"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPribUdaljenost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLijeviGrid"
            android:text="@string/txtPribUdaljenost" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtTrajanjePutovanja"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLijeviGrid"
            android:layout_marginTop="5dp"
            android:text="@string/txtTrajanjePutovanja" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRow" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/marginLijeviGrid"
            android:background="@color/pozadinaGrid"
            android:columnCount="@integer/brojStupaca"
            android:orientation="vertical"
            android:rowCount="@integer/brojRedaka" >

            <Space />

            <Button
                android:id="@+id/btnZoviCammeo"
                android:layout_width="147dp"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_row="0"
                android:layout_rowSpan="3"
                android:onClick="clickHandler"
                android:text="@string/btnZovi" />

            <TextView
                android:id="@+id/txtNazivCammeo"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:text="@string/txtNazivCammeo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Space />

            <TextView
                android:id="@+id/txtTelefonCammeo"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:paddingTop="2dp"
                android:text="@string/txtTelBrojCammeo" />

            <TextView
                android:id="@+id/txtCijenaCammeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="top|left"
                android:layout_row="2"
                android:paddingTop="2dp"
                android:text="@string/txtCijena" />
        </GridLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRow" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/marginLijeviGrid"
            android:background="@color/pozadinaGrid"
            android:columnCount="@integer/brojStupaca"
            android:orientation="vertical"
            android:rowCount="@integer/brojRedaka" >

            <Space />

            <Button
                android:id="@+id/btnZoviRadioTaxi"
                android:layout_width="147dp"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_row="0"
                android:layout_rowSpan="3"
                android:onClick="clickHandler"
                android:text="@string/btnZovi" />

            <TextView
                android:id="@+id/txtNazivRadioTaxi"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:text="@string/txtNazivRadioTaxi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Space />

            <TextView
                android:id="@+id/txtTelefonRadioTaxi"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:paddingTop="2dp"
                android:text="@string/txtTelBrojRadioTaxi" />

            <TextView
                android:id="@+id/txtCijenaRadioTaxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="top|left"
                android:layout_row="2"
                android:paddingTop="2dp"
                android:text="@string/txtCijena" />
        </GridLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRow" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/marginLijeviGrid"
            android:background="@color/pozadinaGrid"
            android:columnCount="@integer/brojStupaca"
            android:orientation="vertical"
            android:rowCount="@integer/brojRedaka" >

            <Space />

            <Button
                android:id="@+id/btnZoviEkoTaxi"
                android:layout_width="147dp"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_row="0"
                android:layout_rowSpan="3"
                android:onClick="clickHandler"
                android:text="@string/btnZovi" />

            <TextView
                android:id="@+id/txtNazivEkoTaxi"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:text="@string/txtNazivEkoTaxi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Space />

            <TextView
                android:id="@+id/txtTelefonEkoTaxi"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:paddingTop="2dp"
                android:text="@string/txtTelBrojEkoTaxi" />

            <TextView
                android:id="@+id/txtCijenaEkoTaxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="top|left"
                android:layout_row="2"
                android:paddingTop="2dp"
                android:text="@string/txtCijena" />
        </GridLayout>
    </TableRow>

    <Button
        android:id="@+id/btnKarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBtnPrikazi"
        android:enabled="false"
        android:onClick="clickHandler"
        android:text="@string/btnKarta" />

</TableLayout>